[project]
name = "aerospike-langgraph"
version = "0"
description = "Monorepo root for the aerospike-langgraph packages"
requires-python = ">=3.10"

dependencies = [
  "langgraph-checkpoint-aerospike",
  "langgraph-store-aerospike",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "langchain-community",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
langgraph-checkpoint-aerospike = { workspace = true }
langgraph-store-aerospike = { workspace = true }
